Adding gradle to build